feat: juggler-14fd946e, juggler-2be67a71, juggler-b053c8f8 - Add CI linting job, security-first installation docs, PR template reference

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,3 +63,22 @@ jobs:
       - name: Verify binary runs (Windows)
         if: matrix.os == 'windows-latest'
         run: .\juggle.exe --version
+
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.25'
+          cache: true
+          cache-dependency-path: go.sum
+
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: latest
