Standardize .gitignore: adopt shared superset across all ~/repos

--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,235 @@
-# Binaries
-/juggler
-/juggle
+# ============================================================
+# Shared .gitignore — superset across all ~/repos
+# ============================================================
 
-# Config folder
-.juggle/
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[codz]
+*$py.class
 
-# Devbox
-/.devbox/
+# C extensions
+*.so
 
-# Claude Code (local overrides)
-.claude/settings.local.json
-.claude/agents
-.claude/commands
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# Claude Code sandbox phantom files (bwrap bug)
-.bash_profile
-.bashrc
-.gitconfig
-.gitmodules
-.mcp.json
-.profile
-.ripgreprc
-.zprofile
-.zshrc
-.idea
-.vscode
+# PyInstaller
+*.manifest
+*.spec
 
-# IDE
-.idea/
-.vscode/
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py.cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff
+instance/
+.webassets-cache
+
+# Scrapy stuff
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+.pybuilder/
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+# .python-version
+
+# pipenv
+# Pipfile.lock
+
+# UV
+# uv.lock
+
+# poetry
+# poetry.lock
+# poetry.toml
+
+# pdm
+# pdm.lock
+# pdm.toml
+.pdm-python
+.pdm-build/
+
+# pixi
+# pixi.lock
+.pixi
+
+# PEP 582
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# Redis
+*.rdb
+*.aof
+*.pid
+
+# RabbitMQ
+mnesia/
+rabbitmq/
+rabbitmq-data/
+
+# ActiveMQ
+activemq-data/
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.envrc
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+myenv/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
+
+# PyCharm / JetBrains
+# .idea/
+
+# Abstra
+.abstra/
+
+# Visual Studio Code
+# .vscode/
+
+# Ruff
+.ruff_cache/
+
+# PyPI configuration file
+.pypirc
+
+# Cursor
+.cursorignore
+.cursorindexingignore
+
+# Marimo
+marimo/_static/
+marimo/_lsp/
+__marimo__/
+
+# Streamlit
+.streamlit/secrets.toml
+
+# ── Go ────────────────────────────────────────────────────
+*.test
+*.out
+*.prof
+coverage.txt
+
+# ── Node / JS ─────────────────────────────────────────────
+node_modules/
+package-lock.json
+
+# ── IDE & OS ──────────────────────────────────────────────
+.DS_Store
+Thumbs.db
 *.swp
 *.swo
 *~
 
-# OS
-.DS_Store
-Thumbs.db
-
-# Go
-*.test
-*.out
-coverage.txt
-*.prof
-
-# Temporary files
+# ── Temp / runtime ────────────────────────────────────────
 tmp/
 temp/
+nohup.out
+*.heapsnapshot
+
+# ── AI assistants ─────────────────────────────────────────
+.aider*
+.ralph/logs/
+.claude/settings.local.json
+.claude/agents
+.claude/commands
+
+# ── Juggle task runner ────────────────────────────────────
+.juggle/*
+!.juggle/config.json
+
+# ── Credentials / secrets ─────────────────────────────────
+auth/
+
+# ── Project-specific ──────────────────────────────────────
+/juggler
+/juggle
+/.devbox/
